--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 main:
-  - title: "Posts"
-    url: /year-archive/
+  - title: "Home"
+    url: /index.html
   - title: "Category"
     url: /categories/
+  - title: "About"
+    url: /about/
