--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ name                     : "JAEDEOK JO"
 description              : ""
 url                      : "https://lubiksss.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "lubiksss/lubiksss.github.io"
+repository               : "lubiksss/comments"
 teaser                   : #"/assets/images/cube_free.jpg"
 logo                     : "/assets/images/cube_free.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs            : true
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
+  provider               : 'utterances' # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -41,8 +41,8 @@ comments:
     num_posts            : # 5 (default)
     colorscheme          : # "light" (default), "dark"
   utterances:
-    theme                : # "github-light" (default), "github-dark"
-    issue_term           : # "pathname" (default)
+    theme                : 'photon-dark' # "github-light" (default), "github-dark"
+    issue_term           : 'pathname' # "pathname" (default)
   giscus:
     repo_id              : # Shown during giscus setup at https://giscus.app
     category_name        : # Full text name of the category
@@ -286,6 +286,6 @@ defaults:
       author_profile: true
       read_time: false
       show_date: true
-      comments: # true
+      comments: true
       share: false
       related: true
