--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ social:
 analytics:
   provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : 'G-NTG399PYM2'
+    tracking_id          : 'G-37DQ36QSBD'
     anonymize_ip         : # true, false (default)
 
 
