--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ comments:
     num_posts            : # 5 (default)
     colorscheme          : # "light" (default), "dark"
   utterances:
-    theme                : 'photon-dark' # "github-light" (default), "github-dark"
+    theme                : 'github-dark' # "github-light" (default), 'photon-dark'
     issue_term           : 'pathname' # "pathname" (default)
   giscus:
     repo_id              : # Shown during giscus setup at https://giscus.app
